Fix warning by adding missing JVM arguments