@@ -30,7 +30,9 @@ application {
         """-DprojectVersion=${project.version}""",
         """-DcurriculumFileName=${curriculumFileName}""",
         """-DversionDate=${versionDate}""",
-        """-Dlanguages=${languages.join(',')}"""]
+        """-Dlanguages=${languages.join(',')}""",
+        """--add-opens""", """java.base/sun.nio.ch=ALL-UNNAMED""",
+        """--add-opens""", """java.base/java.io=ALL-UNNAMED"""]
 }
 
 apply from: 'scripts/includeLearningObjectives.gradle'
